# DataMining

./: README.md  pyproject.toml
forms/: FullScreenWindow.py  MainWindow.py  MyFullScreenWindow.py  MyMainWindow.py
resources/: resources.py  resources.qrc
ui/: FullScreenWindow.ui  MainWindow.ui
utils/: BoundingBox.py  Session.py  VideoThread.py
