[tool.poetry]
name = "datamining"
version = "0.1.0"
description = ""
authors = ["stburnv <stburnv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyqt6 = "^6.5.2"
pyside6 = "^6.6.1"
opencv-python = "^4.8.1.78"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
